--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,7 @@ dependencies {
     implementation libs.androidx.material.icons.extended
     implementation libs.androidx.foundation
     implementation libs.androidx.foundation.layout
+    implementation libs.androidx.foundation
+
+
 }
