--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,10 @@
 [versions]
+accompanistFlowlayout = "0.34.0"
 agp = "8.8.0"
 coilCompose = "2.2.2"
 converterGson = "2.9.0"
-foundation = "1.7.4"
+foundation = "1.7.8"
+foundationVersion = "1.4.3"
 hiltNavigationCompose = "1.2.0"
 hiltVersion = "2.51.1"
 kotlin = "2.0.0"
@@ -25,6 +27,7 @@ kotlinxCoroutinesAndroid = "1.7.3"
 materialIconsCore = "1.5.1"
 
 [libraries]
+accompanist-flowlayout = { module = "com.google.accompanist:accompanist-flowlayout", version.ref = "accompanistFlowlayout" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "foundation" }
